discussion/kv_engine/182556/182556_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add ItemPagerFactory

Adds a factory class for the item pager tasks. We will extend this
factory to return a  cross-bucket item pager task for buckets with
that feature enabled.

Change-Id: Ib7e0dcba94ca35f7074205f389f7a4f08b278809

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-29 19:42:37.000000000
Message: 
Uploaded patch set 5: Patch Set 4 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-29 21:53:26.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43078/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43078/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51316/ : FAILURE

Failure of GoogleTest "TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/tests/testapp/testapp_stats.cc(302): error: Value of: stats.empty()
  Actual: true
Expected: false
[  FAILED  ] TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl, where GetParam() = McbpSsl (5 ms)
TransportProtocols/StatsTest.MB37147_TestEWBReturnFromStat/McbpSsl
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51316/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22036/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22036/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22036/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11752/ : FAILURE

Compile error at [2022-11-29T20:35:24.239Z] ../kv_engine/include/memcached/dockey.h:16:10:
fatal error: "platform/sized_buffer.h" file not found
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11752/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24486/ : FAILURE

Compile error at [2022-11-29T21:18:28.642Z] ../kv_engine/tests/testapp/testapp.h:18:10:
fatal error: memcached/types.h: No such file or directory
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24486/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25339/ : FAILURE

ThreadSanitizer issue: data race ../platform/include/platform/non_negative_counter.h:142 in cb::NonNegativeCounter<unsigned long, cb::DefaultUnderflowPolicy>::fetch_sub(long)  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25339/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21557/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23557/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11842/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/785/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24073/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32489/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
